k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monsterhouse
  labels:
    app.kubernetes.io/name: monsterhouse
